--- a/templates/keepalived.conf.j2
+++ b/templates/keepalived.conf.j2
@@ -3,12 +3,14 @@ global_defs {
    notification_email {
      {{ keepalived_global_defs_notification_email }}
    }
+   script_user root root
+   enable_script_security
    notification_email_from {{ keepalived_global_defs_notification_email_from }}
    smtp_server {{ keepalived_global_defs_smtp_server }}
    smtp_connect_timeout {{ keepalived_global_defs_smtp_connect_timeout }}
 }
 vrrp_script check_haproxy {
-  script "pgrep haproxy"
+  script "/usr/bin/pgrep haproxy"
   interval 2
   fall 3
   rise 2
